--- a/inst/rmd/quality_control.Rmd
+++ b/inst/rmd/quality_control.Rmd
@@ -115,7 +115,7 @@ ribo_matrix <- extract_data(ribo_to_check, "count", position_to_rownames = TRUE)
 medcov <- apply(ribo_matrix,2,function(x) median(x,na.rm=T)) 
 # create a df like ribo_matrix and add median_coverage column
 qcdata <- cbind(qcdata,median_coverage=medcov[rownames(qcdata)]) 
-# add a quality column initialized at ok
+# add a quality column initialized
 qcdata$coverage_quality <- "pass" 
 # add a threshold for outliers
 qcdata$coverage_quality[qcdata$median_coverage < 100] <- "warning" 
@@ -180,49 +180,7 @@ print(plot_rle)
 The repartition of RNA end read counts is an indicator of the RNA(s) that present a lower or higher coverage compared to the other RNAs within the same sample. A sample that shows an unusual repartition might be considered with caution, as it could impact the C-score robustness. The following image shows a stacked barplots representing end read count fractions of total end read counts for each RNA per sample. In the case of rRNAs, most end read counts are assigned to the longest rRNA, namely the 18S (~ 0.25) and the 28S (~ 0.50).
 
 ```{r, fig.asp = 0.8, fig.width = 10}
-#plot_counts_fraction <- rRMSAnalyzer::plot_counts_fraction(ribo_to_check) + ggplot2::ggtitle("RNA fraction per sample")
 rRMSAnalyzer::plot_counts_fraction(ribo_to_check) + ggplot2::ggtitle("RNA fraction per sample")
-# library(ggplot2)
-# library(gridExtra)
-# #% de sous ARN théorique calculé à la main : 
-# #28S : 70.26053
-# #5.8S : 2.161863
-# #5S : 1.676829
-# #18S : 25.90078
-# #Création du data frame avec les noms des arn et leur fractions théoriques. 
-# theorical_fraction <- data.frame(
-#   sample = "theorical",
-#   group = factor(unique(plot_counts_fraction$plot_env$all_data_sums$rna)),
-#   value = (c("1.676829","25.90078", "70.26053", "2.161863"))
-# )
-# #conversion en valeur numérique pour le graphique
-# theorical_fraction$value <- as.numeric(theorical_fraction$value)
-# #conversion en %
-# 
-# theorical_fraction$value <- (theorical_fraction$value/100)
-# 
-# #création du plot pour la barre théorique
-# theorical_counts_plot <- ggplot2::ggplot(theorical_fraction, aes(x = sample, y = value, fill = group))
-# theorical_counts_plot <- theorical_counts_plot + 
-#   ggplot2::geom_bar(stat = "identity", width = 0.1) + # Ajuster la largeure de la barre 
-#   ggplot2::geom_text(aes(label = value), 
-#                     position = position_stack(vjust = 0.5), # Centrer le texte dans chaque barre
-#                     color = "black", size = 4) +
-#   ggplot2::scale_fill_brewer(palette = "Spectral") +
-#   ggplot2::theme_bw() +
-#   ggplot2::theme(axis.text.x = element_text(angle = 90, size = 10, hjust = 1),
-#                  legend.position = "none") +
-#   labs(title = "Theorical counts distribution",
-#        x = "Theorical bar",
-#        y = "Theorical counts fraction (%)") +
-#   ggplot2::scale_y_continuous(limits = c(-0.03, 1.01))
-# 
-# theorical_counts_plot + 
-#   ggplot2::theme(
-#     plot.margin = ggplot2::unit(c(1, 50, 1, 0), "cm") # Ajuste les marges (haut, droite, bas, gauche)
-#   )
-# # impression des deux graphiques cote à cote
-# grid.arrange(plot_counts_fraction, theorical_counts_plot, ncol = 2, widths = c(3, 1))
 ```
 
 # Profiles comparison
@@ -239,13 +197,7 @@ Of note, rRNA sequences are enriched in GC-stretches and in nucleotide repeats w
 
 In order to identify distinct coverage profiles, coverage profiles are compared with one other within the cohort. Pairwise sample correlations of coverage profile are calculated using a Pearson correlation based distance. A heatmap is then generated that summarizes the correlation values for the entire series. These values goes from 0 (no correlation, indicated in red) to 1 (perfect correlation, indicated in blue). 
 
-```{r heatmap_corr}
-#plot_heatmap_corr <- rRMSAnalyzer::plot_heatmap_corr(ribo_to_check,"Count")
-```
-
-
-
-```{r heatmap_v2, fig.asp = 0.9, fig.width = 15}
+```{r heatmap_corr, fig.asp = 0.9, fig.width = 15}
 # TEST New heatmap with outlier_level
 library(ComplexHeatmap)
 library(dplyr)
@@ -271,24 +223,24 @@ row_annotation <- HeatmapAnnotation(
     rle_median_quality = c("ok" = "darkgrey", "warning" = "red")
   ),
   annotation_legend_param = list(
-    title_gp = gpar(fontsize = 16), # Taille du titre
-    labels_gp = gpar(fontsize = 14), # Taille des étiquettes
-    grid_width = unit(8, "mm"),     # Largeur des carrés
-    grid_height = unit(8, "mm")     # Hauteur des carrés
+    title_gp = gpar(fontsize = 16), # title size
+    labels_gp = gpar(fontsize = 14), # tag title
+    grid_width = unit(8, "mm"),     # square width
+    grid_height = unit(8, "mm")     # square height
   )
 )
 
-#créer un vecteur pour la couleur des échantillons suivant le niveau d'outlier 
+# create a vector for sample color by level of outlier
 column_colors <- ifelse(qcdata$total_outliers > 0, "red", "black")
 
-# Identifier les échantillons en "Warning"
+# identifying warning sample
 column_colors <- ifelse(
   qcdata$coverage_quality == "warning" | qcdata$rle_median_quality == "warning",
-  "red",  # Échantillons "Warning" en rouge
-  "black" # Autres échantillons en noir
+  "red",  # "Warning" in red
+  "black" # other in black
 )
 
-# Plot de la heatmap avec noms des colonnes colorés
+# heatmap plot with name of coloured columns
 x <- Heatmap(
   corr_matrix, col = pearson_color,
   top_annotation = row_annotation,
@@ -299,11 +251,11 @@ x <- Heatmap(
   cluster_rows = FALSE, cluster_columns = TRUE,
   clustering_distance_columns = "pearson", 
   heatmap_legend_param = list(
-    legend_direction = "horizontal", # Légende horizontale
-    title_gp = gpar(fontsize = 16),  # Taille du titre de la légende
-    labels_gp = gpar(fontsize = 14), # Taille des étiquettes de la légende
-    grid_height = unit(10, "mm"),    # Hauteur des carrés de la légende
-    grid_width = unit(10, "mm")      # Largeur des carrés de la légende 
+    legend_direction = "horizontal", # horizontal legend
+    title_gp = gpar(fontsize = 16),  # legend title size
+    labels_gp = gpar(fontsize = 14), # legend tags title
+    grid_height = unit(10, "mm"),    # legend square height 
+    grid_width = unit(10, "mm")      # legend square width
   ),
   clustering_method_columns = "ward.D2",
   column_split = 3,
@@ -312,13 +264,13 @@ x <- Heatmap(
   column_dend_side = "bottom",
   column_dend_height = unit(1, "cm"),
   column_dend_gp = gpar(col = "red"),
-  column_names_gp = gpar(col = column_colors, fontsize = 16) # Couleur des noms des colonnes
+  column_names_gp = gpar(col = column_colors, fontsize = 16) # column name color
 )
 
 draw(
   x,
-  heatmap_legend_side = "bottom",  # Position de la légende
-  annotation_legend_side = "bottom" # Pour les légendes des annotations
+  heatmap_legend_side = "bottom",  # legend position
+  annotation_legend_side = "bottom" # for legend annotation
 )
 ```
 
